--- a/snippets/create_campaign_params.mdx
+++ b/snippets/create_campaign_params.mdx
@@ -29,14 +29,11 @@
 	Special ad categories = `HOUSING`, `FINANCIAL_PRODUCTS_SERVICES`,
 	`EMPLOYMENT`
 	<Note>
-		`HOUSING`: Ads related to property sales, rentals, or home-related
-		services.
+		- `HOUSING`: Ads related to property sales, rentals, or home-related
+		services. - `FINANCIAL_PRODUCTS_SERVICES`: Ads promoting credit cards,
+		loans, insurance, or other financial services. - `EMPLOYMENT`: Ads
+		offering job opportunities or recruitment-related services.
 	</Note>
-	<Note>
-		`FINANCIAL_PRODUCTS_SERVICES`: Ads promoting credit cards, loans,
-		insurance, or other financial services.
-	</Note>
-	<Note>`EMPLOYMENT`: Ads offering job opportunities or recruitment-related services.</Note>
 </ParamField>
 
 <ParamField body="specialAdCountries" type="string[]">
